# ros_intel_movidius_ncs

./: .gitignore  CHANGELOG.rst  README.md
data/: categories.txt  voc.txt
data/labels/: voc21.txt
doc/: image_classification.md  image_detection.md  multiple_device.md  video_classification.md  video_detection.md
movidius_ncs/: CMakeLists.txt  package.xml
movidius_ncs_example/: CMakeLists.txt  package.xml
movidius_ncs_example/src/: device_parallel_demo.cpp  image_classification.cpp  image_detection.cpp  image_sample.cpp  multiple_devices_classification.cpp  single_device_classification.cpp  stream_classification.cpp  stream_detection.cpp  stream_sample.cpp
movidius_ncs_example/src/single_multiple_device_example/: multiple_devices_classification.cpp  multiple_devices_detection.cpp  single_device_classification.cpp  single_device_detection.cpp
movidius_ncs_image/: CMakeLists.txt  package.xml
movidius_ncs_image/include/movidius_ncs_image/: ncs_server.h
movidius_ncs_image/src/: ncs_server.cpp
movidius_ncs_image/tests/: test_unit.test  unittest_image_classification.cpp  unittest_image_detection.cpp
movidius_ncs_launch/: CMakeLists.txt  package.xml
movidius_ncs_launch/config/: alexnet.yaml  googlenet.yaml  inception_v1.yaml  inception_v2.yaml  inception_v3.yaml  inception_v4.yaml  mobilenet.yaml  mobilenetssd.yaml  squeezenet.yaml  tinyyolo_v1.yaml
movidius_ncs_launch/launch/: ncs_camera.launch  ncs_camera_demo.launch  ncs_image_classification_example.launch  ncs_image_detection.launch  ncs_image_detection_example.launch  ncs_image_parallel_classification_example.launch  ncs_image_parallel_detection.launch  ncs_image_parallel_detection_example.launch  ncs_image_parallel_example.launch  ncs_nocam.launch  ncs_nocam_classifier.launch  ncs_nocam_detector.launch  ncs_realsense.launch  ncs_realsense_d400.launch  ncs_realsense_d400_classifier.launch  ncs_realsense_d400_detector.launch  ncs_realsense_zr300.launch  ncs_stream_classification_example.launch  ncs_stream_detection_example.launch  ncs_stream_example.launch  ncs_stream_parallel_classification_example.launch  ncs_stream_parallel_detection_example.launch  ncs_usbcam.launch  ncs_usbcam_classifier.launch  ncs_usbcam_detector.launch
movidius_ncs_launch/launch/includes/: multiple_ncs_demo.launch  ncs_image.launch  ncs_image_multiple.launch  ncs_image_single.launch  ncs_stream.launch  ncs_stream_classification.launch  ncs_stream_classification_multiple.launch  ncs_stream_classification_single.launch  ncs_stream_detection.launch  ncs_stream_detection_multiple.launch  ncs_stream_detection_single.launch  single_ncs_demo.launch
movidius_ncs_lib/: CMakeLists.txt  package.xml
movidius_ncs_lib/include/movidius_ncs_lib/: device.h  exception.h  exception_util.h  graph.h  inference.h  mvnc_cpp.h  ncs.h  ncs_manager.h  result.h  tensor.h
movidius_ncs_lib/src/: device.cpp  exception.cpp  exception_util.cpp  graph.cpp  inference.cpp  ncs.cpp  ncs_manager.cpp  result.cpp  tensor.cpp
movidius_ncs_lib/tests/: test_all.test  unittest_environment.cpp  unittest_function.cpp
movidius_ncs_msgs/: CMakeLists.txt  package.xml
movidius_ncs_msgs/msg/: ObjectInBox.msg  Objects.msg  ObjectsInBoxes.msg
movidius_ncs_msgs/srv/: ClassifyObject.srv  DetectObject.srv
movidius_ncs_stream/: CMakeLists.txt  nodelet_plugins.xml  package.xml
movidius_ncs_stream/include/movidius_ncs_stream/: ncs_nodelet.h
movidius_ncs_stream/src/: ncs_nodelet.cpp
movidius_ncs_stream/tests/: test_unit.test  unittest_stream_classification.cpp  unittest_stream_detection.cpp
