<?xml version="1.0"?>
<!--
Copyright (c) 2017 Intel Corporation

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

     http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
-->
<package>
  <name>movidius_ncs</name>
  <version>0.6.0</version>
  <description>Movidius NCS metapackage</description>
  <author email="xiaojun.huang@intel.com">Xiaojun Huang</author>
  <maintainer email="xiaojun.huang@intel.com">Xiaojun Huang</maintainer>
  <maintainer email="chao1.li@intel.com">Chao Li</maintainer>

  <license>Apache 2.0</license>

  <url type="website">http://wiki.ros.org/ros_intel_movidius_ncs</url>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>movidius_ncs_lib</run_depend>
  <run_depend>movidius_ncs_image</run_depend>
  <run_depend>movidius_ncs_stream</run_depend>
  <run_depend>movidius_ncs_launch</run_depend>
  <run_depend>movidius_ncs_example</run_depend>

  <export>
    <metapackages />
  </export>
</package>
