<?xml version="1.0"?>
<!--
Copyright (c) 2017 Intel Corporation

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

     http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
-->
<package>
  <name>movidius_ncs_example</name>
  <version>0.6.0</version>
  <description>The example package</description>
  <author email="xiaojun.huang@intel.com">Xiaojun Huang</author>
  <maintainer email="xiaojun.huang@intel.com">Xiaojun Huang</maintainer>
  <maintainer email="chao1.li@intel.com">Chao Li</maintainer>
  
  <url type="website">http://wiki.ros.org/ros_intel_movidius_ncs</url>

  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>object_msgs</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>roslint</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>object_msgs</run_depend>
  <run_depend>cv_bridge</run_depend>
</package>
